--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "license": "MIT",
   "homepage": "https://github.com/andrelandgraf/high5-learning-backend.git#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.1",
     "nodemon": "^1.17.4"
   },
